# vulka2

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  setup-vendored.sh  source-me.sh
crates/renderer/: Cargo.toml
crates/renderer/shaders/: cube.inl  cube.slang
crates/renderer/src/: app.rs  main.rs  renderer.rs  test_renderer.rs  test_renderer_v2.rs
crates/renderer/src/gpu/: allocation.rs  buffer.rs  buffer_allocator.rs  buffer_object.rs  buffer_region.rs  buffer_span.rs  bump_allocator.rs  bump_buffer.rs  command_allocator.rs  command_batch.rs  command_buffer.rs  command_pool.rs  descriptor_allocator.rs  descriptor_set.rs  descriptor_set_layout.rs  device.rs  device_address.rs  engine.rs  extension_name_array.rs  extension_support.rs  feature_support.rs  fence.rs  frame_allocator.rs  gpu_allocator.rs  gpu_buffer.rs  gpu_device.rs  gpu_device_request.rs  gpu_instance.rs  gpu_surface.rs  gpu_swapchain.rs  graphics_pipeline.rs  image.rs  image_view.rs  lane_vec.rs  mapped_buffer.rs  mod.rs  owned_command_pool.rs  owned_descriptor_pool.rs  owned_descriptor_set_layout.rs  owned_device.rs  (+33 more)
crates/renderer/src/gpu_v2/: command_allocator.rs  command_batch.rs  command_buffer.rs  command_pool.rs  device.rs  engine.rs  fence.rs  frame_allocator.rs  gpu_future.rs  gpu_future_set.rs  lane_vec.rs  liveness.rs  mod.rs  owned_command_pool.rs  owned_device.rs  owned_fence.rs  owned_image_view.rs  owned_instance.rs  owned_semaphore.rs  owned_surface.rs  owned_swapchain.rs  progress_tracker.rs  queue.rs  queue_actual.rs  queue_group.rs  queue_group_table.rs  queue_group_vec.rs  queue_lane.rs  queue_selection.rs  retire_queue.rs  shader_object.rs  submission_epoch.rs  submission_id.rs  submission_progress.rs  submit_signal.rs  swapchain.rs  usage_token.rs  validation_layers.rs
crates/slang/: Cargo.toml
crates/slang/src/: cursor.rs  lib.rs  main.rs
crates/slang/src/compiler/: mod.rs  slang_compiler.rs  slang_linker.rs  slang_module.rs  slang_program.rs
crates/slang/src/cursor/: cursor_layout.rs  mod.rs  types.rs
crates/slang/src/reflection/: bindless.rs  builder.rs  ir.rs  ir_denorm.rs  layout.rs  layout_bindless.rs  layout_builder.rs  layout_v2.rs  layout_v3.rs  mod.rs  print.rs  reflect.rs  reflect_type.rs  serde_slang.rs  serde_vk.rs  shader_slang.rs  types.rs
crates/slang/tests/: global_and_entrypoint_pb.rs  official_slang_pb_example.rs  shader_slang_param_block_example.rs  shader_slang_param_block_example_ir.rs  shader_slang_param_block_example_ir_normalized.rs
crates/slang/tests/fixtures/: common.slang  global_entry_pb.slang  shader.slang
docs/: BINDLESS.md  PIPELINE_OPT.md  REFLECTION.md  SLANG_LAYOUT.md
(+31 files in other folders)
