[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
crevice = { version = "0.18.0", features = ["glam"] }
generational-arena = "0.2.9"
glam = { version = "0.30.10", features = ["bytemuck"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
num-traits = "0.2.19"
slang = { path = "../slang" }
slang_struct = { version = "0.0.2", features = ["glam", "bytemuck"] }
smallbitvec = "2.6.0"
smallvec = "1.15.1"
vulkanalia = { version = "0.34.0", features = ["libloading", "window"] }
vulkanalia-vma = "0.8.0"
winit = "0.30.12"
