[package]
name = "slang"
version = "0.1.0"
edition = "2024"

[lib]
name = "slang"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
compact_str = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shader-slang = "0.1.0"
vulkanalia = "0.34.0"

[dev-dependencies]
insta = { version = "1.46.1", features = ["yaml"] }
